# omniadapters

./: .env.sample  .gitignore  .mypy.ini  .ruff.toml  Makefile  pyproject.toml  pyrightconfig.json  ty.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yaml  documentation.yaml  feature_request.yaml  performance.yaml
.github/workflows/: ci.yml  docs.yml  release.yml  typescript.yml
docs/adr/: 0001-pydantic-ai-as-default.md
omniadapters-ts/: .gitignore  .oxlintrc.json  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
omniadapters-ts/playground/completion/: 01-demo.ts
omniadapters-ts/src/: adapter.ts  factory.ts  index.ts
omniadapters-ts/src/core/: config.ts  errors.ts
omniadapters-ts/tests/: adapter.test.ts
omniadapters/completion/: __init__.py  _map_api_errors.py  errors.py  factory.py
omniadapters/completion/adapters/: _openai_compatible.py  anthropic.py  azure_openai.py  base.py  gemini.py  openai.py
omniadapters/core/: constants.py  cost.py  costs.py  enums.py  models.py  tokens.py  types.py  usage.py  usage_converter.py
omniadapters/providers/: factory.py  types.py
omniadapters/pydantic_ai/: __init__.py  adapter.py  config.py  factory.py  tracing.py
omniadapters/structify/: __init__.py  factory.py  hooks.py  models.py  types.py
omniadapters/structify/adapters/: __init__.py  anthropic.py  azure_openai.py  base.py  gemini.py  openai.py
omniadapters/utils/: costs.py
playbook/: CoVe.md  _config.yml  _toc.yml  intro.md
playground/completion/: .env.sample  01_demo.py  02_tools_complete.py  03_conversation.py  04_error_handling.py  _shared.py
playground/critic/: main.py  prompts.py
playground/critic/agents/: __init__.py  cove.py
playground/critic/config/: settings.py
playground/pydantic_ai/: .env.sample  README.md  app.py  constants.py  dependencies.py  main.py  routes.py  schemas.py  service.py  state.py
playground/pydantic_ai/chat/: 01_basic_chat.py  02_streaming_chat.py  03_multimodal_chat.py
playground/pydantic_ai/config/: config.yaml  settings.py
playground/pydantic_ai/image/: .env.sample  image_analysis.py  settings.py
playground/pydantic_ai/text/: .env.sample  01_demo.py  02_conversation.py  03_streaming.py  04_traced.py  settings.py
playground/structify/: .env.sample  01_demo.py  02_conversation.py  config.py  settings.py
playground/structify/image/: .env.sample  image_analysis.py  settings.py
playground/structify/multimodal/: __init__.py  image_analysis.py
playground/structify/text/: .env.sample  01_demo.py  02_conversation.py  config.py  settings.py
scripts/: clear_cache.py  patterns.py
tests/: conftest.py
tests/integration/structify/: test_base_adapter.py
tests/unit/adapters/: test_to_unified_chunk.py  test_usage_extract.py
tests/unit/completion/: test_errors.py  test_map_api_errors.py
tests/unit/core/: test_cost.py  test_tokens.py  test_usage.py
tests/unit/pydantic_ai/: test_aclose.py  test_adapter.py  test_factory.py  test_tracing.py
tests/unit/structify/: test_adapters.py  test_config.py  test_factory.py  test_hooks.py  test_thread_safety.py  test_types.py
tests/unit/utils/: test_costs.py
