[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniadapters"
version = "35.0.0"
description = "A collection of code for omniadapters - unified interfaces for LLM providers."
authors = [{name="GAO Hongnan", email="hongnangao@gmail.com"}]
maintainers = [{name="GAO Hongnan", email="hongnangao@gmail.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
keywords = [
    "llm",
    "adapters",
    "ai",
    "openai",
    "anthropic",
    "google",
    "gemini",
    "structured-output",
    "pydantic",
    "instructor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "jsonref>=1.1.0,<2.0.0",
    "instructor>=1.15.0,<1.16.0",
    "pydantic-ai-slim[anthropic,google,openai]>=1.93.0",
    "openai>=2.8.0,<3.0.0",
    "anthropic>=0.72.0,<1.0.0",
    "google-genai>=2.3.0,<3.0.0",
]

[project.optional-dependencies]
token = ["tiktoken>=0.12.0"]
playground = [
    "pydanticonf>=1.0.0",
]
all = [
    "omniadapters[token]",
    "omniadapters[playground]",
]

[dependency-groups]
lint = [
    "bandit>=1.9.0",
    "commitizen>=4.13.0",
    "pre-commit>=4.5.0",
    "ruff>=0.15.0",
]

type = [
    "mypy>=1.20.0",
    "pyrefly>=0.61.0",
    "pyright>=1.1.408",
    "ty>=0.0.31",
    "typeguard>=4.4.4",
    "types-pyyaml>=6.0.12.20250516",
    "types-psutil>=7.0.0.20250822",
]

test = [
    "coverage>=7.13.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.1.0",
]

docs = [
    "jupyter-book>=1.0.4,<1.1.0",
    "myst-nb>=1.0.0,<2.0.0",
    "sphinx-copybutton>=0.5.0,<1.0.0",
    "sphinxcontrib-mermaid>=0.9.0,<2.0.0",
    "sphinx-proof>=0.1.0,<1.0.0",
    "sphinxcontrib-bibtex>=2.0.0,<3.0.0",
    "sphinx-togglebutton>=0.3.0,<1.0.0",
    "sphinx-design>=0.5.0,<1.0.0",
]

dev = [
    { include-group = "lint" },
    { include-group = "type" },
    { include-group = "test" },
    { include-group = "docs" },
]

[project.urls]
Homepage = "https://github.com/gao-hongnan/omniadapters"
Documentation = "https://github.com/gao-hongnan/omniadapters/tree/main/playbook"
Repository = "https://github.com/gao-hongnan/omniadapters"
Issues = "https://github.com/gao-hongnan/omniadapters/issues"
Changelog = "https://github.com/gao-hongnan/omniadapters/releases"

[tool.hatch.build.targets.wheel]
packages = ["omniadapters"]
artifacts = ["omniadapters/.tiktoken_cache/**"]
exclude = [
    "tests/",
    "docs/",
    "playbook/",
    "playground/",
    "examples/",
    "scripts/",
    "*.pyc",
    "__pycache__/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".coverage",
    "htmlcov/",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "docs/",
    "playbook/",
    "playground/",
    "examples/",
    "scripts/",
    "*.pyc",
    "__pycache__/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".git/",
    ".github/",
    ".venv/",
    "dist/",
    "build/",
    ".coverage",
    "htmlcov/",
    ".DS_Store",
]

[tool.uv]
managed = true

[tool.bandit]
exclude_dirs = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv_*",
    "venv",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]
